fixed various bugs and improved readability

--- a/style.css
+++ b/style.css
@@ -11,20 +11,23 @@ body {
     font-weight: 400;
     font-style: normal;
     width: 100%;
-    height: 100%;
+    min-height: 100vh;
     margin: 0;
-    padding: 20px;
+    padding: 0;
     box-sizing: border-box;
 }
 
 body {
+    padding: 40px;
     display: grid;
     grid-template-rows: 1fr auto 1fr;
 }
 
 em {
     font-style: normal;
-    border-bottom: 2px solid rgb(0, 116, 116);
+    text-decoration: underline;
+    text-decoration-color: rgb(0, 116, 116);
+    text-decoration-thickness: 2px;
 }
 
 .separator {
@@ -44,6 +47,7 @@ em {
     max-width: 820px;
     margin: 20px auto;
     text-align: justify;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #links {
@@ -209,13 +213,17 @@ em {
     margin-right: 10px;
 }
 
-@media (max-width: 730px) {
+@media (max-width: 800px) {
+    body {
+        grid-template-rows: auto auto auto;
+    }
+
     .separator {
         display: block;
         width: 200px;
         height: 0px;
-        margin: auto;
         border-top: 2px solid #242526;
+        margin: 20px auto;
     }
 
     .separator-container {
@@ -225,14 +233,13 @@ em {
     #title {
         font-size: 32px;
         display: grid;
-        grid-template-rows: 200px 1fr;
         gap: 18px;
     }
 
     #links {
         font-size: 20px;
         display: grid;
-        grid-template-rows: 1fr 200px;
+        margin-bottom: 20px;
         gap: 18px;
     }
 
